# filament-kmp

./: .gitignore  AGENT_FILAMENT_API_METHODOLOGY.md  API_PARITY_BATCH_GUIDE.md  BATCH_SUMMARY.md  CHANGELOG.md  KOTLIN_BINDINGS_ROADMAP.md  LICENSE.md  README.md  build.gradle.kts  gradle.properties  interop-centralized-tracker.md  local.properties  publish-cocoapods.sh  settings.gradle.kts
c/: CMakeLists.txt  impelementation.md
c-wrapper/: CMakeLists.txt
c-wrapper/include/backend/: AcquiredImage.h  BufferDescriptor.h  CallbackHandler.h  DescriptorSetOffsetArray.h  DriverApiForward.h  DriverEnums.h  Handle.h  PipelineState.h  PixelBufferDescriptor.h  Platform.h  PresentCallable.h  Program.h  SamplerDescriptor.h  TargetBufferInfo.h
c-wrapper/include/filament/: Box.h  BufferDescriptor.h  BufferObject.h  Camera.h  Color.h  ColorGrading.h  ColorSpace.h  DebugRegistry.h  Engine.h  EntityManager.h  Exposure.h  Fence.h  FilamentAPI.h  Frustum.h  IndexBuffer.h  IndirectLight.h  LightManager.h  Material.h  MaterialChunkType.h  MaterialEnums.h  MaterialInstance.h  MorphTargetBuffer.h  Options.h  RenderTarget.h  RenderableManager.h  Renderer.h  Scene.h  SkinningBuffer.h  Skybox.h  Stream.h  SwapChain.h  Sync.h  Texture.h  TextureSampler.h  ToneMapper.h  TransformManager.h  Types.h  VertexBuffer.h  View.h  Viewport.h
c-wrapper/include/geometry/: SurfaceOrientation.h  TangentSpaceMesh.h  Transcoder.h
c-wrapper/include/gltfio/: Animator.h  AssetLoader.h  FilamentAsset.h  FilamentInstance.h  MaterialProvider.h  NodeManager.h  ResourceLoader.h  TextureProvider.h  TrsTransformManager.h
c-wrapper/include/utils/: CallStack.h  Compiler.h  Debug.h  Entity.h  EntityInstance.h  EntityManager.h  ImmutableCString.h  Log.h  Memalign.h  NameComponentManager.h  Panic.h  Path.h  Status.h
c-wrapper/src/backend/: AcquiredImage.cpp  BufferDescriptor.cpp  CallbackHandler.cpp  DescriptorSetOffsetArray.cpp  DriverApiForward.cpp  DriverEnums.cpp  Handle.cpp  PipelineState.cpp  PixelBufferDescriptor.cpp  Platform.cpp  PresentCallable.cpp  Program.cpp  SamplerDescriptor.cpp  TargetBufferInfo.cpp
c-wrapper/src/filament/: Box.cpp  BufferDescriptor.cpp  BufferObject.cpp  Camera.cpp  Color.cpp  ColorGrading.cpp  ColorSpace.cpp  DebugRegistry.cpp  Engine.cpp  Entity.cpp  EntityInstance.cpp  EntityManager.cpp  Exposure.cpp  Fence.cpp  Frustum.cpp  GeometrySurfaceOrientation.cpp  GeometryTangentSpaceMesh.cpp  GeometryTranscoder.cpp  GltfioAnimator.cpp  GltfioAssetLoader.cpp  GltfioFilamentAsset.cpp  GltfioFilamentInstance.cpp  GltfioTextureProvider.cpp  IndexBuffer.cpp  IndirectLight.cpp  InstanceBuffer.cpp  LightManager.cpp  Material.cpp  MorphTargetBuffer.cpp  NameComponentManager.cpp  Options.cpp  RenderTarget.cpp  RenderableManager.cpp  Renderer.cpp  Scene.cpp  SkinningBuffer.cpp  Skybox.cpp  Status.cpp  Stream.cpp  SwapChain.cpp  (+16 more)
c-wrapper/src/geometry/: GeometryTangentSpaceMesh.cpp  SurfaceOrientation.cpp  TangentSpaceMesh.cpp  Transcoder.cpp
c-wrapper/src/gltfio/: AssetLoader.cpp  FilamentAsset.cpp  FilamentInstance.cpp  MaterialProvider.cpp  NodeManager.cpp  ResourceLoader.cpp  TrsTransformManager.cpp
c-wrapper/src/utils/: Debug.cpp  Entity.cpp  EntityInstance.cpp  EntityManager.cpp  Log.cpp  NameComponentManager.cpp  Panic.cpp  Path.cpp  Status.cpp  UtilsCallStack.cpp  UtilsPath.cpp
c-wrapper/test/: CMakeLists.txt  README.md  build.sh  test_functionality.sh  test_headers.sh  test_integration.sh  test_module.sh
c-wrapper/test/functionality/: functionality_backend_driver_enums.c  functionality_backend_platform.c  functionality_box.c  functionality_color.c  functionality_color_options_material_metadata.c  functionality_color_space.c  functionality_engine_buffer_object.c  functionality_engine_camera_exposure.c  functionality_engine_descriptor_callback_lifecycle.c  functionality_engine_fence.c  functionality_engine_geometry_advanced_buffers.c  functionality_engine_indirect_light_scene.c  functionality_engine_light_manager.c  functionality_engine_material_instance_parameters.c  functionality_engine_renderable_manager.c  functionality_engine_resource_builders.c  functionality_engine_runtime_queries.c  functionality_engine_scene.c  functionality_engine_scene_lit_shadow_first_frame.c  functionality_engine_scene_renderer.c  functionality_engine_scene_view.c  functionality_engine_scene_view_first_frame.c  functionality_engine_stream_texture_params.c  functionality_engine_swapchain.c  functionality_engine_texture_skybox.c  functionality_engine_transform_manager.c  functionality_engine_view_color_grading_render_target.c  functionality_entity_manager.c  functionality_geometry_surface_orientation_null_safety.c  functionality_geometry_tangent_space_mesh_null_safety.c  functionality_geometry_transcoder_null_safety.c  functionality_gltfio_animator_null_safety.c  functionality_gltfio_asset_loader_null_safety.c  functionality_gltfio_filament_asset_null_safety.c  functionality_gltfio_filament_instance_null_safety.c  functionality_gltfio_load_unload_smoke.c  functionality_gltfio_material_provider_null_safety.c  functionality_gltfio_node_manager_null_safety.c  functionality_gltfio_resource_loader_null_safety.c  functionality_gltfio_texture_provider_null_safety.c  (+8 more)
c-wrapper/test/headers/: headers_all_public_headers.c  headers_backend_acquired_image.c  headers_backend_descriptor.c  headers_backend_descriptor_set_offset_array.c  headers_backend_driver_api_forward.c  headers_backend_driver_enums.c  headers_backend_handle.c  headers_backend_pipeline_state.c  headers_backend_platform.c  headers_backend_program.c  (+60 more)
c-wrapper/tools/: README_parity_audit.md  filament_parity_audit.py  filament_parity_report.json  filament_parity_report.md
java/: CMakeLists.txt  README.md  build.gradle.kts  gradle.properties  java-cmake.gradle.kts  settings.gradle.kts
java/filamat/: CMakeLists.txt  build.gradle.kts
java/filament/: CMakeLists.txt  build.gradle.kts
java/filament-ffm/: build.gradle.kts
java/filament-utils/: CMakeLists.txt  build.gradle.kts
java/gltfio/: CMakeLists.txt  build.gradle.kts
java/gradle/: libs.versions.toml
(+1303 files in other folders)
